<resources>
    <string name="app_name">RollingPictures</string>
    <string name="welcome_message"> 님, 환영합니다!</string>
    <string name="game_start">GAME START</string>
    <string name="create_room">CREATE ROOM</string>
    <string name="public_rooms_list">PUBLIC ROOM LIST</string>
    <string name="ok_kor">확인</string>
    <string name="cancel_kor">취소</string>
    <string name="exit_dialog_title">게임방을 나가시겠습니까?</string>
    <string name="exit_dialog_subtitle">입장 페이지로 이동하며,\n코드를 통해 다시 들어올 수 있습니다.</string>
    <string name="exit_button">나가기</string>
    <string name="insert_nick_name">닉네임 입력</string>
    <string name="insert_room_code">방 코드 입력</string>
    <string name="some_id">방 코드 입력</string>
    <string name="creating_room">방 만들기</string>
    <string name="room_title">방 제목</string>
    <string name="room_isPublic">공개 여부</string>
    <string name="room_public">공개</string>
    <string name="room_private">비공개</string>
    <string name="room_maximum">최대 인원</string>
    <string name="ok">OK</string>
    <string name="waiting_room">대기실</string>
    <string name="player">Player</string>
    <string name="start_game">START GAME</string>
    <string name="exit_room">EXIT ROOM</string>
    <string name="current_round">대기실</string>
    <string name="public_room_list">공개방 목록</string>
    <string name="game_info">전부 완료를 누르면, 다음 라운드로 넘어갑니다!</string>
    <string name="complete_round">COMPLETE</string>
    <string name="guide_round1">제시어를 입력하세요.</string>
    <string name="guide_round2">다음 그림을 보고 제시어를 입력하세요.</string>
    <string name="end_game">게임 종료</string>
    <string name="exit_game">EXIT GAME</string>
    <string name="title_activity_game">GameActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="guide_code">지금 계신 방의 코드를 공유하세요!</string>

    <string name="no_permissions_granted">권한의 허용 없이는 게임 진행이 불가합니다!</string>
    <string name="permissions_dialog_title">권한 요청</string>
    <string name="accept_permissions_dialog">권한 허용</string>
    <string name="cancel_dialog">닫기</string>
    <string name="open_source_info_title">오픈 소스 정보</string>
    <string name="open_source_info_sub">Android용 RollingPictures 앱은 다음의 오픈 소스 소프트웨어를 사용하여 만들어졌습니다.</string>
    <string name="os_title_android_draw">AndroidDraw</string>
    <string name="os_link_android_draw">https://github.com/divyanshub024/AndroidDraw</string>
    <string name="os_content_android_draw">
Copyright 2018 Divyanshu Bhargava \n\n
Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\n
\thttp://www.apache.org/licenses/LICENSE-2.0\n\n
Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="minimum_count">정원은 2명 이상이어야 합니다.</string>
    <string name="cur_count">현재 정원보다 설정하려는 인원이 적습니다.</string>
    <string name="maximum_count">정원은 최대 6명입니다.</string>
    <string name="room_default_title">그리기 초보만</string>
    <string name="room_default_cnt">3</string>
    <string name="set_room">방 설정</string>
    <string name="player_cnt">10/10</string>
    <string name="ex_publisher">TextView</string>
    <string name="ex_sender">TextView</string>
    <string name="answer">TextView</string>

</resources>