<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.GameWaitingFragment">

    <TextView
        android:id="@+id/playerTitleTextView"
        style="@style/Text.PlayerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_size_8"
        android:layout_marginTop="@dimen/margin_size_32"
        android:text="@string/player"
        android:textSize="@dimen/player_list_title_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roomCodeTextView" />

    <TextView
        android:id="@+id/playerCountTextView"
        style="@style/Text.PlayerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_size_10"
        android:text="10/10"
        android:textSize="@dimen/player_list_title_size"
        app:layout_constraintBottom_toBottomOf="@+id/playerTitleTextView"
        app:layout_constraintStart_toEndOf="@+id/playerTitleTextView"
        app:layout_constraintTop_toTopOf="@+id/playerTitleTextView" />

    <TextView
        android:id="@+id/guideCodeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size_8"
        android:text="@string/guide_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPlayer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/recycler_height"
        android:layout_marginTop="@dimen/margin_size_16"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerTitleTextView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/exitRoom"
        style="@style/Text.ExitStyle"
        android:layout_width="@dimen/fragment_height"
        android:layout_height="@dimen/box_height"
        android:layout_marginBottom="@dimen/margin_size_24"
        android:background="@drawable/bg_button_exit"
        android:text="@string/exit_room"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/roomCodeTextView"
        style="@style/Text.EditTextHintStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/box_height"
        android:layout_marginTop="@dimen/margin_size_16"
        android:background="@drawable/bg_input_dark"
        android:padding="@dimen/padding_size_20"
        android:text="4025QWd5"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideCodeTextView"
        app:layout_constraintWidth_percent="0.8" />

    <ImageButton
        android:id="@+id/shareImageButton"
        android:layout_width="@dimen/code_button_size"
        android:layout_height="@dimen/code_button_size"
        android:layout_marginTop="@dimen/margin_size_8"
        android:layout_marginEnd="@dimen/margin_size_12"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/copyImageButton"
        app:layout_constraintTop_toTopOf="@+id/roomCodeTextView"
        app:srcCompat="@drawable/ic_outline_share_24" />


    <ImageButton
        android:id="@+id/copyImageButton"
        android:layout_width="@dimen/code_button_size"
        android:layout_height="@dimen/code_button_size"
        android:layout_marginTop="@dimen/margin_size_8"
        android:layout_marginEnd="@dimen/margin_size_12"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="@+id/roomCodeTextView"
        app:layout_constraintTop_toTopOf="@+id/roomCodeTextView"
        app:srcCompat="@drawable/ic_baseline_content_copy_24" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startGameButton"
        style="@style/Text.ButtonOkStyle"
        android:layout_width="@dimen/fragment_height"
        android:layout_height="@dimen/box_height"
        android:layout_marginBottom="@dimen/margin_size_8"
        android:background="@drawable/bg_button_ok"
        android:text="@string/start_game"
        app:layout_constraintBottom_toTopOf="@+id/exitRoom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <ImageButton
        android:id="@+id/settingImageButton"
        android:layout_width="@dimen/small_button_size"
        android:layout_height="@dimen/small_button_size"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        app:layout_constraintStart_toEndOf="@+id/playerCountTextView"
        app:layout_constraintTop_toBottomOf="@+id/roomCodeTextView"
        app:srcCompat="@drawable/ic_baseline_settings_applications_24" />


</androidx.constraintlayout.widget.ConstraintLayout>